Feat : reset image
