# types.ts
@@ -38,6 +38,7 @@ export type ProductPutRequest = {
   name?: string;
   categoryId?: string;
   color?: string;
+  resetImage?: boolean;
 };
 
 export type ProductDetailResponse = {
@@ -75,6 +76,7 @@ export type OutfitPutRequest = {
   productsId?: string;
   comment?: string;
   rating?: string;
+  resetImage?: boolean;
 };
 
 export type OutfitResponse = {
